--- a/horarios-plus-plus-client/src/Interfaces/NavigationBar.css
+++ b/horarios-plus-plus-client/src/Interfaces/NavigationBar.css
@@ -32,7 +32,11 @@
   background-color: var(--foreground-hyperlink-color);
 }
 
-.sign-up div { margin-left: auto; }
+.space {
+  flex-grow: 1;
+}
+
+.sign-up { margin-left: auto;}
 
 .navbar-container a {
   color: white;
@@ -44,10 +48,12 @@
 .navbar-container h1 {
   margin: unset;
   margin-left: 0.5rem;
-  font-size: 2rem;
+  font-size: 2.25rem;
   margin-right: 1rem;
 }
 
 .navbar-container div + div {
   margin-left: 1rem;
 }
+
+
