chore: Update CSS for GenerationInterface, CourseSemesterContainer, and TimeBlockInterface

--- a/horarios-plus-plus-client/src/Interfaces/GenerationInterface.css
+++ b/horarios-plus-plus-client/src/Interfaces/GenerationInterface.css
@@ -108,6 +108,10 @@
   margin-left: 15px;
 }
 
+.button-selected {
+  background-color: var(--foreground-hyperlink-color);
+}
+
 .action-buttons {
   flex-flow:column;
   margin-left: auto;
