Funciona todo agregar y borrar materia

--- a/horarios-plus-plus-client/src/Interfaces/TimeBlockInterface.css
+++ b/horarios-plus-plus-client/src/Interfaces/TimeBlockInterface.css
@@ -57,6 +57,15 @@
   background-color: var(--background-light-color);
 }
 
+.delete-section button {
+  font-size: 13px;
+  background-color: var(--background-semi-light-color);
+}
+
+.delete-section button:hover {
+  background-color: var(--background-light-color);
+}
+
 .section {
   display: flex;
   flex-flow: row;
