--- a/horarios-plus-plus-client/src/Interfaces/GenerationInterface.css
+++ b/horarios-plus-plus-client/src/Interfaces/GenerationInterface.css
@@ -113,10 +113,30 @@
 }
 
 .action-buttons {
-  flex-flow:column;
-  margin-left: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  background-color: var(--background-semi-light-color);
+  border: 1px solid #dcdcdc;
+  border-radius: 5px;
+  font-size: 20px;
+}
 
+/* .action-buttons select {
+  padding: 1px 20px;
+  font-size: 15px;
+} */
 
+.action-buttons select {
+  padding: 1px 20px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: white;
+  font-size: 16px;
+  color: #333;
+  outline: none;
+  cursor: pointer;
 }
 
 .filter-button {
