--- a/horarios-plus-plus-client/src/Interfaces/PermsPage.css
+++ b/horarios-plus-plus-client/src/Interfaces/PermsPage.css
@@ -1,68 +1,49 @@
-.main-container{
-  display: flex;
-
-  /* Para posicionar el main container */
-  height: 100vh;
-  max-height: 100vh;
-  box-sizing: border-box;
-  padding-top: var(--navbar-size);
-
-  flex-flow: row nowrap;
-  overflow: hidden;
-
-} 
-
-.login-container {
-  display: grid;
-  width: 100%;
-  place-items: center;
+.permsPage {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: start;
+	padding: 20px;
+	background-color: #f5f5f5;
 }
 
-.login-bg {
-  display: flex;
-  flex-flow: column;
-  background-color: var(--background-medium-color);
-  padding: 50px;
-  border-radius: 4px;
-  font-size: 50px;
+.permsPage-header {
+	font-size: 24px;
+	color: #333;
+	margin-bottom: 20px;
 }
 
-.login-header {
-  margin-bottom: 30px;
-}
-.login-header{
-  font-size: 80px;
-}
-
-.login-user input, .login-password input {
-  padding: 15px 0px;
-  width: 100%;
+.permsPage-content {
+	width: 100%;
+	max-width: 600px;
+	background-color: #fff;
+	border-radius: 8px;
+	box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+	padding: 20px;
 }
 
-.login-button {
-  align-self: center;
+.permsPage-item {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 10px 0;
+	border-bottom: 1px solid #eee;
 }
 
-.login-button button {
-  font-size: 30px;
-  padding: 10px 15px;
-  background-color: var(--background-semi-light-color);
+.permsPage-item:last-child {
+	border-bottom: none;
 }
 
-.login-button button:hover {
-  background-color: var(--background-light-color);
+.permsPage-label {
+	font-size: 16px;
+	color: #666;
 }
 
-.login-button button:active {
-  background-color: white;
+.permsPage-action {
+	display: flex;
+	align-items: center;
 }
 
-.login-error {
-  color: red;
-  font-size: 40%;
-}
-
-.login-succesful{
-color: rgb(6, 230, 6);
-font-size: 40%;
+.permsPage-switch {
+	margin-left: 10px;
 }
