--- a/horarios-plus-plus-client/src/Interfaces/MyScheduleInterface.css
+++ b/horarios-plus-plus-client/src/Interfaces/MyScheduleInterface.css
@@ -59,3 +59,48 @@
     color: red;
     font-size: 40%;
 }
+/* parte de los eventos */
+.selector-eventos {
+    margin-left: 10%;
+    border: 1px solid var(--secondary-color);
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    background-color: var(--primary-color);
+    color : white;
+    
+}
+
+.selector-eventos:hover {
+    
+    background-color: azure;
+    color: black;
+}
+
+.visor-eventos {
+    display: table-column;
+    margin-left: 10%;
+    border: 1px solid white;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    background-color: var(--background-medium-color);
+    color : white;
+    align-items: center;
+    background-color: var();
+    width: 30%;
+}
+.puede{
+    color: rgb(6, 230, 6);
+    font-weight: bold;
+}
+.no-puede{
+    color: red;
+    font-weight: bold;
+}
+.puede-asistir {
+    color: var(--success-color);
+    font-weight: bold;
+}
