chore: Refactor GenerationInterface component
The GenerationInterface component has been refactored to improve code readability and maintainability. The changes include:
- Commenting out an error toast message that is currently not being used.
- Removing unnecessary commented code.

Co-authored-by: David-Hidalgo <dehidalgo.22@est.ucab.edu.ve>

--- a/horarios-plus-plus-client/src/Interfaces/PermsPage.css
+++ b/horarios-plus-plus-client/src/Interfaces/PermsPage.css
@@ -45,12 +45,17 @@
 
 .user {
 	width: 500px;
+	height: 30px;
 	display: flex;
 	flex-direction: wrap;
 	justify-content: flex-end;
-	
+
 	padding: 15px 0px;
 	font-size: 25px;
+}
+
+.user select{
+	height: auto;
 }
 
 #permiso{
